# reactos

./: .gitignore  CMakeLists.txt  ChromeFunctions.txt
base/applications/baresh/: CMakeLists.txt  baresh.rc  sh.c  sh.rc
base/applications/bootpsx/: CMakeLists.txt  bootpsx.c  bootpsx.h  bootpsx.rc
base/applications/posixsleep/: CMakeLists.txt  posixsleep.c  posixsleep.rc
base/applications/posixw32/: CMakeLists.txt  posixw32.c  vt100.c
boot/freeldr/uefi/: CMakeLists.txt  font.c  stubs.c  uefiacpi.c  ueficon.c  uefidisk.c  uefildr.c  uefimem.c  uefisetup.c  uefiutil.c  uefivid.c  utils.c
dll/cpl/bthprops/: CMakeLists.txt  bthprops.c  bthprops.h  bthprops.rc  bthprops.spec  enum.c  resource.h  stubs.c
dll/directx/: CMakeLists.txt
dll/directx/d3d8/: CMakeLists.txt  d3d8.c
dll/directx/d3d9/: CMakeLists.txt  d3d9_device.c  d3d9_mipmap.c  d3d9_swapchain.c  format.c
dll/directx/d3dim/: CMakeLists.txt  d3dim.c  d3dim.rc  d3dim.spec
dll/directx/d3drm/: CMakeLists.txt  d3drm.rc  d3drm.spec  d3drm_main.c  precomp.h
dll/directx/d3dxof/: CMakeLists.txt  d3dxof.rc  d3dxof.spec  d3dxof_private.h  main.c
dll/directx/ddraw/: CMakeLists.txt  main.c
dll/directx/dinput/: CMakeLists.txt  dinput.rc  dinput.spec  dinput_main.c  dinput_private.h  precomp.h
dll/directx/dinput8/: CMakeLists.txt  dinput8.c  dinput8.rc  dinput8.spec
dll/directx/dmusic/: CMakeLists.txt  dmusic.rc  dmusic.spec  dmusic_main.c  dmusic_private.h
dll/directx/dplayx/: CMakeLists.txt  dplayx.rc  dplayx.spec
dll/directx/dsound_new/: CMakeLists.txt
dll/directx/wine/: CMakeLists.txt
dll/ntdll/nt_0600/: CMakeLists.txt  DllMain.c  ntdll_vista.spec  ntfuncs.c  zwfuncs.c
dll/ntdll_new/: CMakeLists.txt
dll/ntdll_new/def/: ntdll.spec
dll/ntdll_new/include/: ldrp.h  ntdllp.h
dll/ntdll_new/ldr/: LdrGetDllHandleEx.cpp  LdrImageDirectoryEntryToLoadConfig.cpp  LdrpAllocatePlaceHolder.cpp  LdrpApplyFileNameRedirection.cpp  LdrpBuildForwarderLink.cpp  LdrpCompleteMapModule.cpp  LdrpCondenseGraph.cpp  LdrpDereferenceModule.cpp  LdrpDestroyNode.cpp  LdrpDoPostSnapWork.cpp  LdrpFindDllActivationContext.cpp  LdrpFindLoadedDll.cpp  LdrpFindLoadedDllByAddress.cpp  LdrpFindLoadedDllByMapping.cpp  LdrpFindOrPrepareLoadingModule.cpp  LdrpFreeLoadContextOfNode.cpp  LdrpFreeReplacedModule.cpp  LdrpGetFullPath.cpp  LdrpGetProcedureAddress.cpp  LdrpHandleReplacedModule.cpp  LdrpHandleTlsData.cpp  LdrpInitializeGraphRecurse.cpp  LdrpIsExtensionPresent.cpp  LdrpLoadContextReplaceModule.cpp  LdrpLoadDependentModule.cpp  LdrpLoadForwardedDll.cpp  LdrpMapAndSnapDependency.cpp  LdrpMapDllWithSectionHandle.cpp  LdrpMinimalMapModule.cpp  LdrpNotifyLoadOfGraph.cpp  LdrpPinModule.cpp  LdrpPrepareImportAddressTableForSnap.cpp  LdrpPrepareModuleForExecution.cpp  LdrpPreprocessDllName.cpp  LdrpProcessWork.cpp  LdrpQueueWork.cpp  LdrpRecordModuleDependency.cpp  LdrpRelocateImage.cpp  LdrpResolveDllName.cpp  LdrpResolveForwarder.cpp  (+17 more)
dll/ntdll_new/nt_0600/: threadpool.c
dll/os2/doscalls/: CMakeLists.txt  doscalls.def.bak  doscalls.edf  doscalls.rc  doscalls.spec  implemented_functions_info.txt  makefile  stubs.c
dll/posix/psxdll/: CMakeLists.txt  crt0w32.c  psxdll.edf  psxdll.h  psxdll.rc  psxdll.spec  stubs.c
dll/posix/psxx/: CMakeLists.txt  psxx.c  psxx.h  psxx.rc  psxx.spec  stubs.c
dll/vms/vmsdll/: CMakeLists.txt  dllmain.c  vmsdll.rc  vmsdll.spec
dll/win32/audioses/: CMakeLists.txt  audioses.spec
dll/win32/bluetoothapi/: CMakeLists.txt  DllMain.c  bluetoothapis.rc  bluetoothapis.spec  bluetoothapis_private.h  manage.c  stubs.c
dll/win32/clbcatq/: CMakeLists.txt
dll/win32/dwmapi/: CMakeLists.txt  DllMain.c  dwmapi.h  dwmapi.rc  dwmapi.spec  dwmapi_private.h  manage.c  stubs.c
dll/win32/dwmcore/: CMakeLists.txt  DllMain.c  dwmcore.h  dwmcore.rc  dwmcore.spec
dll/win32/dwmredir/: CMakeLists.txt  DllMain.c  dwmredir.rc  dwmredir.spec
dll/win32_vista/: CMakeLists.txt  notes.md
dll/win32_vista/SHUNIMPL/: CMakeLists.txt  SHUNIMPL.rc  SHUNIMPL.spec
dll/win32_vista/avrt/: CMakeLists.txt  avrt.rc  avrt.spec
dll/win32_vista/bluetoothapis/: dllmain.c  version.rc
dll/win32_vista/clbcatq/: DllMain.c  clbcatq.rc  clbcatq_private.h  stubs.c
dll/win32_vista/cryptbase/: CMakeLists.txt  DllMain.c  cryptbase.rc  cryptbase_private.h  stubs.c
dll/win32_vista/dwmapi/: CMakeLists.txt  dwmapi.spec  dwmapi_private.h  manage.c  stubs.c
dll/win32_vista/feclient/: CMakeLists.txt  version.rc
dll/win32_vista/imageres/: CMakeLists.txt  imageres.cpp  imageres.h  imageres.rc
dll/win32_vista/ktmw32/: CMakeLists.txt  DllMain.c  ktmw32.spec  stubs.c
dll/win32_vista/logoncli/: CMakeLists.txt  logoncli.rc
dll/win32_vista/mf/: CMakeLists.txt  mf.c  mf.spec
dll/win32_vista/mfplat/: CMakeLists.txt  mfplat.c  mfplat.spec
dll/win32_vista/mfreadwrite/: CMakeLists.txt  mfreadwrite.spec
dll/win32_vista/ncrypt/: CMakeLists.txt  main.c  ncrypt.rc  ncrypt.spec  ncrypt_internal.h
dll/win32_vista/ndfapi/: CMakeLists.txt  ndfapi.spec
dll/win32_vista/rstrtmgr/: CMakeLists.txt  RstrtMgr.rc  RstrtMgr.spec
dll/win32_vista/shcore/: CMakeLists.txt  main.c  shcore.rc
dll/win32_vista/slc/: CMakeLists.txt  entry.c  slc.rc  slc.spec  stubs.c
dll/win32_vista/slwga/: CMakeLists.txt  entry.c  slwga.h  slwga.rc  slwga.spec  stubs.c
dll/win32_vista/sspicli/: CMakeLists.txt  KB.h  sspicli.rc  sspicli.spec
dll/win32_vista/uianimation/: CMakeLists.txt  version.rc
dll/win32_vista/uiautomationcore/: CMakeLists.txt  uia_main.c  uiautomationcore.rc
dll/win32_vista/wevtapi/: CMakeLists.txt  KB.h  stubs.c  wevtapi.rc  wevtapi.spec
dll/win32_vista/winecrt/: CMakeLists.txt  dllmain.c  (+4 more)
win32ss_vista/cdd/: CMakeLists.txt  anotherblt.c  anotherblt.cpp  cdd.c  cdd.cpp  cdd.h  cdd.rc  cdd_testinterface.h  entry.c  entry.cpp
win32ss_vista/dxgkrnl/: CMakeLists.txt  dxgglobal.cpp  dxgk_misc.cpp  dxgkrn_reg.c  dxgkrnl.c  dxgkrnl.cpp  dxgkrnl.h  dxgkrnl.rc  dxgkrnl.spec  dxgkrnl_reg.cpp  dxgkrnl_vista.c  entry.cpp  interface_vista.c  kmdod.cpp  pdxgkrnl.h
win32ss_vista/user32_vista/: CMakeLists.txt  stubs.c  user32_vista.rc  user32_vista.spec
(+1939 files in other folders)
