
add_subdirectory(d3d8thk)
#add_subdirectory(bdaplgin) #disabled in trunk
add_subdirectory(d3d8) #disabled in trunk, see wine subfolder
add_subdirectory(d3d9) #disabled in trunk, see wine subfolder
add_subdirectory(d3dim) #disabled in trunk, see wine subfolder
add_subdirectory(d3drm)
add_subdirectory(d3dxof)
add_subdirectory(ddraw) #disabled in trunk, see wine subfolder
add_subdirectory(dinput)
add_subdirectory(dinput8)
add_subdirectory(dmusic)
add_subdirectory(dplayx)
add_subdirectory(dsound_new) #disabled in trunk
#add_subdirectory(ksproxy) Not needed at the moment
add_subdirectory(ksuser)
#add_subdirectory(msdvbnp) #disabled in trunk
#add_subdirectory(msvidctl) #disabled in trunk
add_subdirectory(wine)
